# rwebchannel

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
R/: qobject.R  qwebchannel.R  utils.R
inst/example/: CMakeLists.txt  app.R  exampleassets.pri  index.R  main.cpp  standalone.pro
man/: QObject.Rd  QWebChannel.Rd
tests/: testthat.R
tests/testthat/: test-qobject.R  test-qwebchannel.R  test-utils.R
